--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "graphql": "^16.10.0",
+    "helmet": "^8.1.0",
     "json-web-token": "^3.2.0",
     "mongoose": "^8.9.6",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.1"
   }
 }
