--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.1.0",
     "json-web-token": "^3.2.0",
     "mongoose": "^8.9.6",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "otp-generator": "^4.0.1",
