--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.10.0",
     "helmet": "^8.1.0",
     "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
